<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/review_header">
        <EditTextPreference
            app:defaultValue="10"
            app:key="miss_multiplier"
            app:title="@string/miss_multiplier" />

        <EditTextPreference
            app:defaultValue="80"
            app:key="hard_multiplier"
            app:title="@string/hard_multiplier" />

        <EditTextPreference
            app:defaultValue="200"
            app:key="easy_multiplier"
            app:title="@string/easy_multiplier" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/appearance_header">
        <ListPreference
            app:defaultValue="Auto"
            app:entries="@array/entries"
            app:entryValues="@array/values"
            app:key="theme"
            app:title="Theme"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="Import / Export">
        <Preference
            app:key="export_to_file"
            app:title="Export cards to file" />

        <Preference
            app:key="import_from_file"
            app:title="Import cards from file" />

    </PreferenceCategory>

    <PreferenceCategory app:title="About app">
        <Preference
            app:key="about_developer"
            app:title="About developer" />

        <Preference
            app:key="github"
            app:title="Github" />

    </PreferenceCategory>

</PreferenceScreen>